--- a/ICT_2021_052.html
+++ b/ICT_2021_052.html
@@ -18,14 +18,12 @@
 		width: 100%;
 		overflow: hidden;
 		padding-top: 2%;
-		
-}	
-	
+	}
 	</style>
 </head>
 <body>
 	<p><a href="signin.html"><input type="button" onclick="clickevent()" value="Sign in" target="_blank"></a></p>
-	<h1>Computer basic skills</h1>
+	<h1><font size="7"> Computer basic skills</h1></font> </h1>
 	
 	<p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
@@ -37,7 +35,7 @@
 		<iframe src="signin.html" height="200" width="400" title="Iframe Signin" class="responsive"></iframe>
 	</div>
 	
-	
+	<p><font size="5"> Begin your computer skills from here!</font></p>
 	<footer>&copy; 2024</footer>
 </body>
 </html>
