--- a/ICT_2021_052.html
+++ b/ICT_2021_052.html
@@ -25,7 +25,7 @@
 	<p><a href="signin.html"><input type="button" onclick="clickevent()" value="Sign in" target="_blank"></a></p>
 	<h1><font size="7"> Computer basic skills</h1></font> </h1>
 	
-	<p><h2>Learn Microsoft  Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
+	<p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
 	<img src="image1.jpg" alt="Microsoft office" id="firstimg" class="responsive">
 	
