--- a/Access.html
+++ b/Access.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Access</title>
-	<link rel="stylesheet" type="text/css" href="style1.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learn Microsoft Office</title>
+    <link rel="stylesheet" href="new.css">
+	<link rel="stylesheet" href="otherPage.css" type="text/css">
 </head>
 <body>
-	<h1>Microsoft Access</h1>
+    <header>
+        <h1>Learn Microsoft Office</h1>
+        <nav>
+            <ul>
+                <li><a href="new.html">Home</a></li>
+                <li><a href="word.html" target="_blank">Word</a></li>
+                <li><a href="excel.html" target="_blank">Excel</a></li>
+                <li><a href="access.html" target="_blank">Access</a></li>
+                <li><a href="powerpoint.html" target="_blank">PowerPoint</a></li>
+                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <img src="access.png" alt="Access image">
+
+    <footer>
+        <p>&copy; 2024 Learn Microsoft Office</p>
+    </footer>
 </body>
 </html>
