--- a/ICT_2021_052.html
+++ b/ICT_2021_052.html
@@ -28,11 +28,11 @@
         <h1>Learn Microsoft Office</h1>
         <nav>
             <ul>
-                <li><a href="new.html">Home</a></li>
+                <li><a href="ICT_2021_052.html">Home</a></li>
                 <li><a href="word.html" target="_blank">Word</a></li>
-                <li><a href="excel.html" target="_blank">Excel</a></li>
-                <li><a href="access.html" target="_blank">Access</a></li>
-                <li><a href="powerpoint.html" target="_blank">PowerPoint</a></li>
+                <li><a href="Excel.html" target="_blank">Excel</a></li>
+                <li><a href="Access.html" target="_blank">Access</a></li>
+                <li><a href="powerPoint.html" target="_blank">PowerPoint</a></li>
             </ul>
         </nav>
     </header>
