--- a/word.html
+++ b/word.html
@@ -12,7 +12,7 @@
         <h1>Learn Microsoft Office</h1>
         <nav>
             <ul>
-                <li><a href="ICT_2021_052.html">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="word.html" target="_blank">Word</a></li>
                 <li><a href="Excel.html" target="_blank">Excel</a></li>
                 <li><a href="Access.html" target="_blank">Access</a></li>
