--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content Page</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="new.css">
     <style>
 		#firstimg{
@@ -28,21 +28,20 @@
         <h1>Learn Microsoft Office</h1>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="word.html" target="_blank">Word</a></li>
-                <li><a href="Excel.html" target="_blank">Excel</a></li>
-                <li><a href="Access.html" target="_blank">Access</a></li>
-                <li><a href="powerPoint.html" target="_blank">PowerPoint</a></li>
                 <li><a href="About.html" target="_blank">About</a></li>
             </ul>
         </nav>
     </header>
+    <p><a href="loginPage.html"><input type="button" onclick="clickevent()" value="Sign in" target="_blank"></a></p>
     <h1><font size="7"> Computer basic skills</h1></font> </h1>
     <p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
 	<img src="image1.jpg" alt="Microsoft office" id="firstimg" class="responsive">
     <h3><p>Start your basic computer skills with us....</p></h3>
-
+	
+	<div class="container">
+		<iframe src="loginPage.html" height="200" width="400" title="Iframe Signin" class="responsive"></iframe>
+	</div>
 	
 	<p><font size="5"> Begin your computer skills from here!</font></p>
     <footer>
