--- a/powerPoint.html
+++ b/powerPoint.html
@@ -11,7 +11,7 @@
         <h1>Learn Microsoft Office</h1>
         <nav>
             <ul>
-                <li><a href="ICT_2021_052.html">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="word.html" target="_blank">Word</a></li>
                 <li><a href="Excel.html" target="_blank">Excel</a></li>
                 <li><a href="Access.html" target="_blank">Access</a></li>
@@ -21,7 +21,7 @@
         </nav>
     </header>
     
-    <img src="powerpoint.png" alt="powerpoint image">
+    <img src="powerpoint.png" alt="powerpoint image" class="images">
 
     <section>
         <h2>Learn Microsoft PowerPoint 2016</h2>
