--- a/Home.html
+++ b/Home.html
@@ -36,11 +36,11 @@
     <h1><font size="7"> Computer basic skills</h1></font> </h1>
     <p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
-	<img src="image1.jpg" alt="Microsoft office" id="firstimg" class="responsive">
+	<img src="image1.jpg" alt="Microsoft office" id="firstimg">
     <h3><p>Start your basic computer skills with us....</p></h3>
 	
 	<div class="container">
-		<iframe src="loginPage.html" height="200" width="400" title="Iframe Signin" class="responsive"></iframe>
+		<iframe src="loginPage.html" height="200" width="400" title="Iframe Signin" ></iframe>
 	</div>
 	
 	<p><font size="5"> Begin your computer skills from here!</font></p>
