--- a/ICT_2021_052.html
+++ b/ICT_2021_052.html
@@ -40,7 +40,7 @@
     <h1><font size="7"> Computer basic skills</h1></font> </h1>
     <p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
-	<img src="image1.jpg" alt="Microsoft office" id="firstimg" class="responsive">
+	<img src="image1.jpg" alt="Microsoft office" id="firstimg">
     <h3><p>Start your basic computer skills with us....</p></h3>
 
 	
