--- a/Home.html
+++ b/Home.html
@@ -19,8 +19,12 @@
 		position: relative;
 		width: 100%;
 		overflow: hidden;
-		padding-top: 2%;
+		padding-top: 1%;
 	}
+	header{
+		position: relative;
+	}
+	
 	</style>
 </head>
 <body>
@@ -32,7 +36,7 @@
             </ul>
         </nav>
     </header>
-    <p><a href="loginPage.html"><input type="button" onclick="clickevent()" value="Sign in" target="_blank"></a></p>
+    <p><a href="signupPage.html" ><input  type="button" onclick="clickevent()" value="Sign in" ></a></p>
     <h1><font size="7"> Computer basic skills</h1></font> </h1>
     <p><h2>Learn Microsoft word, Microsoft Excel, Microsoft Powerpoint and Microsoft Access.</h2></p>
 	<p><h3>Learn the basic skills of computer system</h3></p>
