--- a/word.html
+++ b/word.html
@@ -87,7 +87,7 @@
     </div>
     <div class="step">
         <div class="text1">
-            <p><h2>Step 7: Can adjust page layouts like margin orientation, column, size, indet and spacing using layout tab</h2></p>
+            <p><h2>Step 7: Can adjust page layouts like margin orientation, column, size, indent and spacing using layout tab</h2></p>
         </div>
         <div class="img1">
             <img src="w7.png" alt="first step">
@@ -99,7 +99,7 @@
             <img src="w8.png" alt="second step">
         </div>
         <div class="text">
-            <p><h2>Step 8: Can mail the document to different receipient</h2></p>
+            <p><h2>Step 8: Can mail the document to different recipient</h2></p>
         </div>
         
     </div>
